<resources>
    <string name="app_name">christopher</string>
    <string name="app_developer_name">christopher</string>
    <string name="app_version">1.000.00 Bld 1</string>
    <string name="general_welcome">Welcome</string>
    <string name="general_save">Save</string>
    <string name="general_finish">Finish</string>
    <string name="general_on">On</string>
    <string name="general_off">Off</string>
    <string name="general_finished">Done</string>
    <string name="general_cancel">Cancel</string>
    <string name="general_edit">Edit</string>
    <string name="general_start">Start</string>
    <string name="general_stop">Stop</string>
    <string name="general_yes">Yes</string>
    <string name="general_no">No</string>
    <string name="general_add">Add</string>
    <string name="general_post">Post</string>
    <string name="general_clear">Clear</string>
    <string name="general_none">None</string>
    <string name="general_solve">Solve</string>
    <string name="general_delete">Delete</string>
    <string name="general_open">Open</string>
    <string name="general_close">Close</string>
    <string name="general_share">Share</string>
    <string name="general_exit_app">Exiting…</string>
    <string name="general_exit_app_instructions">Please click BACK again to exit</string>
    <string name="general_loading_status">Loading…</string>
    <string name="general_blank"> </string>
    <string name="general_default">default</string>
    <string name="general_menu_settings">Settings</string>
    <string name="general_menu_about">About</string>
    <string name="general_options">Options</string>
    <string name="general_home">Home</string>
    <string name="general_login">Login</string>
    <string name="general_signUp">Sign Up</string>
    <string name="general_locked">Locked</string>
    <string name="general_signedOut">Signed Out</string>
    <string name="general_agree">Agree</string>
    <string name="general_loading">Loading…</string>
    <string name="general_location">Location</string>
    <string name="general_map">Map</string>
    <string name="general_list">List</string>
    <string name="general_filter">Filter</string>
    <string name="general_filter_selection">Filter Selection</string>
    <string name="general_filter_selection_feed">Filter Feeds</string>
    <string name="general_learn_more">Learn More</string>
    <string name="menu_nav_command_action_1">Survey</string>
    <string name="menu_nav_command_action_2">Points</string>
    <string name="menu_nav_command_action_3">Map</string>
    <string name="menu_nav_command_action_4">Inverse</string>
    <string name="app_set_for_staff">christopher\'s Staff View</string>
    <string name="menu_nav_command_staff_action_1">Feed</string>
    <string name="menu_nav_command_staff_action_2">Company</string>
    <string name="menu_nav_command_staff_action_3">Projects</string>
    <string name="menu_nav_command_staff_action_4"> </string>
    <string name="app_dialog_choose_image_from_storage">Pick image from Gallery</string>
    <string name="app_dialog_choose_image_from_camera">Take Photo</string>
    <string name="appIntro_page1_header">I am a Header</string>
    <string name="appIntro_page1_summary">
        <![CDATA[

            I am the summary section of the page.  I will describe
            the general summary of the program on Page 1.

        ]]>
    </string>
    <string name="appIntro_page2_header">I am a Header</string>
    <string name="appIntro_page2_summary">
        <![CDATA[

            I am the summary section of the page.  I will describe
            the general summary of the program on Page 2.

        ]]>
    </string>
    <string name="appIntro_page3_header">I am a Header</string>
    <string name="appIntro_page3_summary">
        <![CDATA[

            I am the summary section of the page.  I will describe
            the general summary of the program on Page 3.

        ]]>
    </string>
    <string name="appIntro_page4_header">I am a Header</string>
    <string name="appIntro_page4_summary">
        <![CDATA[

            I am the summary section of the page.  I will describe
            the general summary of the program on Page 4.

        ]]>
    </string>
    <string name="appIntro_page_finish_header">Finishing Up</string>
    <string name="appIntro_page_finish_summary">
        <![CDATA[

            We are now finished setting up permissions.  Moving to setting up
            application information next!

        ]]>
    </string>
    <string name="appLogin_sign_in_user_name_first">First Name</string>
    <string name="appLogin_sign_in_user_name_last">Last Name</string>
    <string name="appLogin_sign_in_email">Email Address</string>
    <string name="appLogin_sign_in_password">Password</string>
    <string name="appLogin_sign_in_verify_password">Verify Password</string>
    <string name="appLogin_sign_in_forgot_password">Forgot Password?</string>
    <string name="appLogin_sign_in_app_access_code">Access Code</string>
    <string name="appLogin_sign_in_error_user_email_blank">Email Address Required…</string>
    <string name="appLogin_sign_in_error_password_blank">Password Required…</string>
    <string name="appLogin_sign_in_error_user_first_blank">First Name Required…</string>
    <string name="appLogin_sign_in_error_user_last_blank">Last Name Required…</string>
    <string name="appLogin_sign_in_error_access_key_blank">Company Provided Access Key Required…</string>
    <string name="appLogin_sign_in_error_access_key_wrong">Company Provided Access Key is Not Correct</string>
    <string name="appLogin_sign_in_error_access_key_no_cloud_title">Connection Error</string>
    <string name="appLogin_sign_in_error_access_key_no_cloud_value">Cannot contact the Cloud Service.  Please try again.</string>
    <string name="appLogin_sign_in_error_authentication_fail">Authentication failed. </string>
    <string name="appLogin_sign_in_success_authentication">Login Successful!</string>
    <string name="appLogin_main_header">Welcome!</string>
    <string name="appLogin_main_summary">
        <![CDATA[

            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu
            tempus urna. Aenean in lacus eget purus pretium dignissim. Orci.

        ]]>
    </string>
    <string name="appLogin_sign_up_closed_header">Sorry!</string>
    <string name="appLogin_sign_up_closed_summary">
        <![CDATA[

            The User Access for this app is currently closed.
            Please try again later.

        ]]>
    </string>
    <string name="firebase_login_status_for_debug">Firebase Authentication</string>
    <string name="firebase_email_password_status_fmt">Email User: %1$s (verified: %2$b) \n</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_welcome_fmt">Welcome %s</string>
    <string name="firebase_email_verification_title">User Account Not Verified</string>
    <string name="firebase_email_verification_summary">
        <![CDATA[

            Your email address has not been verified by this application.
            Please check your email for Instructions on verifying your account.
            Not all application functions will work until you verify with our server.

        ]]>

    </string>
    <string name="firebase_email_verification_confirmation">Verification Email Sent to: </string>
    <string name="firebase_email_error_verification">Failed to Send a Verification Email. \n Please try again or contact us </string>
    <string name="firebase_exception_title_default">Oops! Something Went Wrong</string>
    <string name="firebase_exception_title_token">"Oops! Bad Token"</string>
    <string name="firebase_exception_title_credential">Oops! Credential Error</string>
    <string name="firebase_exception_title_email">Oops! Email Error</string>
    <string name="firebase_exception_title_password">Oops! Password Error</string>
    <string name="firebase_exception_title_sign_in">Oops! Error Signing In"</string>
    <string name="firebase_exception_title_sign_up">Oops! Error Signing Up"</string>
    <string name="firebase_exception_title_session_time_out">Oops! Session Timed Out</string>
    <string name="firebase_exception_subject_default">The connection to the server timed out.  Please check your credentials and try again.</string>
    <string name="firebase_exception_subject_ERROR_INVALID_CUSTOM_TOKEN">"The custom token format is incorrect. Please check the documentation."</string>
    <string name="firebase_exception_subject_ERROR_CUSTOM_TOKEN_MISMATCH">"The custom token corresponds to a different audience."</string>
    <string name="firebase_exception_subject_ERROR_INVALID_CREDENTIAL">"The supplied auth credential is malformed or has expired."</string>
    <string name="firebase_exception_subject_ERROR_INVALID_EMAIL">"The email address is badly formatted."</string>
    <string name="firebase_exception_subject_ERROR_WRONG_PASSWORD">"The password is not correct.  Please try again.</string>
    <string name="firebase_exception_subject_ERROR_USER_MISMATCH">"The supplied credentials do not correspond to the previously signed in user."</string>
    <string name="firebase_exception_subject_ERROR_REQUIRES_RECENT_LOGIN">"This operation is sensitive and requires recent authentication. Log in again before retrying this request."</string>
    <string name="firebase_exception_subject_ERROR_ACCOUNT_EXISTS_WITH_DIFFERENT_CREDENTIAL">"An account already exists with the same email address but different sign-in credentials. Sign in using a provider associated with this email address."</string>
    <string name="firebase_exception_subject_ERROR_EMAIL_ALREADY_IN_USE">"The email address already exists.  Please try again."</string>
    <string name="firebase_exception_subject_ERROR_CREDENTIAL_ALREADY_IN_USE">"This credential is already associated with a different user account."</string>
    <string name="firebase_exception_subject_ERROR_USER_DISABLED">"The user account has been disabled by an administrator."</string>
    <string name="firebase_exception_subject_ERROR_USER_TOKEN_EXPIRED">"The user's credential is no longer valid. The user must sign in again."</string>
    <string name="appLogin_forgot_password_title">Forgot Password?</string>
    <string name="appLogin_forgot_password_summary">We just need your registered Email address to send you a instructions on how to reset your password</string>
    <string name="appLogin_forgot_password_button">Reset Password</string>
    <string name="appSetup_terms_header">Review this Apps Policies</string>
    <string name="appSetup_terms_button_view">View Terms of Use</string>
    <string name="appSettings_general_about_header_legal">Legal</string>
    <string name="appSettings_general_about_terms_of_use">Terms of Use</string>
    <string name="appSettings_general_about_privacy_policy">Privacy Policy</string>
    <string name="appSettings_general_about_open_source_licenses">Open Source Licenses</string>
    <string name="appSettings_general_about_header_about">About</string>
    <string name="appSettings_general_about_version">Version</string>
    <string name="appSettings_about_setup_header">Setup Application</string>
    <string name="appSettings_about_setup_is_app_setup_summary">Is Setup Complete</string>
    <string name="appSettings_about_setup_is_app_setup_description">Has Setup run properly on this device. \nChange to No to re-run setup.</string>
    <string name="staff_feed_card_event_going">Going</string>
    <string name="staff_feed_card_event_not_going">Not Going</string>
    <string name="staff_feed_filter_show_all">Show All</string>
    <string name="staff_feed_filter_announcement">Show Announcements</string>
    <string name="staff_feed_filter_events">Show Events</string>
    <string name="staff_feed_filter_birthdays">Show Birthdays</string>
    <string name="staff_feed_filter_items">Show Feed Items</string>
</resources>