<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_item_1"
        android:icon="@drawable/ic_add_location_dark_24dp"
        android:title="@string/menu_nav_command_action_1">
    </item>

    <item
        android:id="@+id/navigation_item_2"
        android:icon="@drawable/ic_list_add_dark_24dp"
        android:title="@string/menu_nav_command_action_2">
    </item>

    <item
        android:id="@+id/navigation_item_3"
        android:icon="@drawable/ic_map_dark_24dp"
        android:title="@string/menu_nav_command_action_3">
    </item>

    <item
        android:id="@+id/navigation_item_4"
        android:icon="@drawable/ic_map_dark_24dp"
        android:title="@string/menu_nav_command_action_4">
    </item>


</menu>