<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/app_background_light"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/setup_activity_header"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/app_bar_top_a_regular"/>


    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_below="@id/setup_activity_header"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/general_item_1_header"
            android:text="@string/appSettings_about_setup_header"
            style="@style/Labels.List.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:id="@+id/rl_general_Item_1"
            android:background="@drawable/button_hollow"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/general_item_1_value"
                android:text="@string/appSettings_about_setup_is_app_setup_summary"
                style="@style/Labels.List.Items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/general_item_1_desc"
                android:text="@string/appSettings_about_setup_is_app_setup_description"
                style="@style/Labels.List.Details"
                android:layout_below="@+id/general_item_1_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.github.angads25.toggle.LabeledSwitch
                android:id="@+id/about_item_1_switch"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_width="@dimen/switch_width_normal"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/setup_content_header_margin_top"
                android:layout_marginEnd="@dimen/setup_content_header_margin_start"
                android:textSize="@dimen/labels_body_normal"
                app:on="false"
                app:textOn="@string/general_yes"
                app:textOff="@string/general_no"
                app:colorOn="@color/colorPrimaryNormal"
                app:colorBorder="#D3D3D3"/>

        </RelativeLayout>




    </LinearLayout>


</RelativeLayout>